# click-loglevel

./: CHANGELOG.md  README.rst  click_loglevel.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: click_loglevel.py
src/click_loglevel/: __init__.py  asyncclick.py  core.py
test/: test_completions.py  test_loglevel.py  test_logleveltype.py  test_with_asyncclick.py  test_with_click.py
test/data/: dict-extra-async.py  dict-extra-nonupper-async.py  dict-extra-nonupper.py  dict-extra.py  list-extra-async.py  list-extra-nonupper-async.py  list-extra-nonupper.py  list-extra.py
