[metadata]
name = click-loglevel
version = attr:click_loglevel.__version__
description = Log level parameter type for Click
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = click-loglevel@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/click-loglevel

keywords =
    cli option
    click
    command line interface
    log level
    log option
    logging
    option parsing

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: System :: Logging

project_urls =
    Source Code = https://github.com/jwodder/click-loglevel
    Bug Tracker = https://github.com/jwodder/click-loglevel/issues

[options]
py_modules = click_loglevel
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    click >= 6.0
